# alexismayer.github.io

./: .gitignore  CNAME  Cargo.toml  README.md  Trunk.toml  _config.yml  about.md  aboutme.md  common.css  common.js  contact.md  craftdata-site.html  gallery.html  gallery.md  index.html  index.md  newsletter.html  package-lock.json  personal.html  products.html  produit.css  produit.html  projet.html  projets.html  script.js  services.html  services.md  shiny  shiny.html  shop  style.css  tailwind.config.js
.github/workflows/: deploy.yml  jekyll.yml
_data/: features.json
_layouts/: home.html  services.html
_sass/bootstrap/: _containers.scss
_sass/components/: _call.scss  _content.scss  _feature.scss  _intro.scss  _strip.scss
_services/: accompagnement.md  automatisation.md  developpement  developpement-ia-data.md  developpement.md  diag.md  diagnostic-data-audit.md  formation.md  formations-sur-mesure.md  industrie.md  nlp.md  offres.md  vision.md
assets/css/: style.scss
common/scripts/: auth.js  main.js  search.js
common/styles/: main.css
css/: bootstrap.min.css  chatbox.css  main.css  shiny.css  style.css  timeline  timeline.css
images/: logo_min.xcf
img/: kaggle.jfif
js/: chatbox.js  js.cookie.js  main.js
portfolio/: projet_1.html  projet_1.md  projet_2.html  projet_2.md  projet_3.html  projet_3.md  projet_4.html  projet_4.md  projet_5.html  projet_5.md  projet_6.html  projet_6.md  projet_7.html  projet_7.md  projet_8.html  projet_8.md  projet_9.html  projet_9.md
public/: index.html
src/: lib.rs
src/domain/: mod.rs  (+3 more)
style/: tailwind.css
(+29 files in other folders)
