[package]
name = "softia"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = "1"
log = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlElement"] }
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
